# quant_agent

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/quant_agent/: config.py  logging_setup.py
src/quant_agent/backtest/: engine.py
src/quant_agent/data/: cache.py
src/quant_agent/strategies/: momentum.py
src/quant_agent/tools/: base.py  compute_stats.py  fetch_prices.py  list_strategies.py  plot_results.py  registry.py  run_backtest.py
tests/: test_backtest.py  test_cache.py  test_smoke.py  test_strategies.py  test_tools.py
