[project]
name = "quant-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pyarrow>=15",        # parquet
    "tenacity>=8",        # retries
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.5", "mypy>=1.10"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]